frontend/src/styles/components-styles/Navbar.css
.nav {
    margin-left: 75px;
    margin-right: 75px;
    margin-top: 25px;
}

.desktop-nav {
    max-width: 1920px;
    margin: auto;
}

.mobile-nav {
    display: none;
}

@media (max-width: 1200px) {
    .nav {
        margin-left: 0;
        margin-right: 0;
    }

    .mobile-nav {
        display: flex;
        align-items: center;
        margin: auto;
    }

    .desktop-nav {
        display: none;
    }
}

.logo {
    background: linear-gradient(to right, #355078, #456688, #547D98, #6695A8);
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
    font-size: xx-large;
}

.platform-dropdown-menu, .company-dropdown-menu {
    position: fixed;
    display: flex;
    flex-direction: column;
    background-color: white;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
    width: 150px;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 20px;
    font-weight: bold;
    z-index: 1;
}

.menu {
    position: fixed;
    display: flex;
    flex-direction: column;
    text-align: center;
    background-color: white;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
    width: 50%;
    z-index: 1;
}

